--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -7,10 +7,6 @@
     <title>Base Project</title>
 </head>
 <body>
-    <div class="horns">
-        <h1>
-            🤘🏿
-        </h1>
-    </div>
+    <img src="../images/metal.gif">
 </body>
 </html>
